# recipes

./: .gitignore  pyproject.toml  pytest.ini  requirements.txt  tags
base_templates/global/: base.html  home.html
config/: settings.py  urls.py
recipes/: admin.py  models.py  tests.py  urls.py  views.py
recipes/migrations/: 0001_initial.py  0002_alter_recipe_cover.py
recipes/static/recipes/css/: style.css
recipes/templates/recipes/pages/: category.html  home.html  recipe_view.html
recipes/templates/recipes/partials/: footer.html  head.html  header.html  recipes.html
recipes/tests/: test_recipe_base.py  test_recipe_url.py  test_recipe_view.py
static/recipes/css/: style.css
utils/recipes/: factory.py
